# crypto-trading-screen

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/src/: binance.rs  lib.rs  main.rs  models.rs  server.rs
frontend/: README.md  package-lock.json  package.json
frontend/public/: electron.js  index.html  preload.js
frontend/src/: App.css  App.js  index.js  websocket.js
frontend/src/components/: CandlestickChart.js  OrderBook.js  TickerPanel.js  TradeHistory.js  TradingHeader.js
